[BlackBerry] Set ResourceRequest TargetType in WebPagePrivate::load() https://bugs.webkit.org/show_bug.cgi?id=80519

Source/WebCore:

Stop asserting in platformCachePolicyForRequest() as now it is expected
that the ResourceRequest might not have the right TargetType setup at
this time for main loads.

Patch by Lianghui Chen <liachen@rim.com> on 2012-04-02
Reviewed by Rob Buis.

No new tests as no change in behaviour.

* platform/network/blackberry/ResourceRequestBlackBerry.cpp:
(WebCore::platformCachePolicyForRequest):

Source/WebKit/blackberry:

Set the right TargetType for main loads if they are not already set in
dispatchWillSendRequest().

Also adjust NetworkRequest TargetType for decidePolicyForExternalLoad()
and dispatchDecidePolicyForNavigationAction() as they are called before
dispatchWillSendRequest() is called. Patch to change ResourceRequest
TargetType earlier has been rejected as in WebKit bug
https://bugs.webkit.org/show_bug.cgi?id=80713

Patch by Lianghui Chen <liachen@rim.com> on 2012-04-02
Reviewed by Rob Buis.

* WebCoreSupport/FrameLoaderClientBlackBerry.cpp:
(WebCore::FrameLoaderClientBlackBerry::dispatchDecidePolicyForNavigationAction):
(WebCore::FrameLoaderClientBlackBerry::dispatchWillSendRequest):
(WebCore::FrameLoaderClientBlackBerry::decidePolicyForExternalLoad):

Canonical link: https://commits.webkit.org/100299@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112940 268f45cc-cd09-0410-ab3c-d52691b4dbfc